Table chat_conversations {
  id bigint [pk, increment]
  student_pk int [not null]
  title varchar(255)
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table chat_messages {
  id bigint [pk, increment]
  conversation_id bigint [not null]
  role varchar(16) [not null]
  content text [not null]
  intent varchar(64)
  confidence varchar(16)
  data_json json
  sql_text text
  sql_error text
  created_at datetime [not null]
}

Table feedbacks {
  id int [pk, increment]
  email varchar(255) [not null]
  subject varchar(32) [not null]
  feedback text [not null]
  suggestions text
  status varchar(32) [not null, default: 'pending']
  created_at datetime
  updated_at datetime
}

Table faqs {
  id int [pk, increment]
  question text [not null]
  answer text [not null]
  is_active boolean [not null, default: true]
  order_index int [not null, default: 0]
  created_at datetime
  updated_at datetime
}

Table password_reset_tokens {
  id int [pk, increment]
  user_type varchar(20) [not null]
  user_id int [not null]
  email varchar(255) [not null]
  token_hash varchar(255) [not null, unique]
  expires_at datetime [not null]
  used boolean [not null, default: false]
  used_at datetime
  request_ip varchar(64)
  user_agent varchar(512)
  created_at datetime [not null]
}

Table students {
  id int [pk, increment]
  student_name varchar(255) [not null]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  course_id int [not null]
  department_id varchar(50)
  password_updated_at datetime
  cpa float [default: 0.0]
  failed_subjects_number int [default: 0]
  study_subjects_number int [default: 0]
  total_learned_credits int [default: 0]
  total_failed_credits int [default: 0]
  year_level varchar(20) [default: 'Trinh do nam 1']
  warning_level varchar(50) [default: 'Canh cao muc 0']
  level_3_warning_number int [default: 0]
}

Ref: chat_conversations.student_pk > students.id
Ref: chat_messages.conversation_id > chat_conversations.id
Ref: students.id < password_reset_tokens.user_id
